src/test/ui/rust-2018/trait-import-suggestions.stderr
error[E0599]: no method named `foobar` found for type `u32` in the current scope
  --> $DIR/trait-import-suggestions.rs:22:11
   |
LL |             fn foobar(&self) { }
   |                ------ the method is available for `u32` here
...
LL |         x.foobar();
   |           ^^^^^^ method not found in `u32`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
LL |     use crate::foo::foobar::Foobar;
   |

error[E0599]: no method named `bar` found for type `u32` in the current scope
  --> $DIR/trait-import-suggestions.rs:28:7
   |
LL |         fn bar(&self) { }
   |            --- the method is available for `u32` here
...
LL |     x.bar();
   |       ^^^ method not found in `u32`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
LL | use crate::foo::Bar;
   |

error[E0599]: no method named `baz` found for type `u32` in the current scope
  --> $DIR/trait-import-suggestions.rs:29:7
   |
LL |     x.baz();
   |       ^^^ method not found in `u32`

error[E0599]: no function or associated item named `from_str` found for type `u32` in the current scope
  --> $DIR/trait-import-suggestions.rs:30:18
   |
LL |     let y = u32::from_str("33");
   |                  ^^^^^^^^ function or associated item not found in `u32`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
LL | use std::str::FromStr;
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0599`.
